crates/testing/sysml-spec-tests/tests/snapshots/service_command_baseline__sysml_diagram_edit__coffee_views.snap
---
source: crates/testing/sysml-spec-tests/tests/service_command_baseline.rs
expression: bundle
---
{
  "request": {
    "request": {
      "action": "create",
      "containerId": null,
      "elementTypeId": "PartDefinition",
      "uri": "<BOOK>/examples/coffee-machine/views.sysml"
    }
  },
  "response": {
    "action": "create",
    "status_message": "Created PartDefinition in <BOOK>/examples/coffee-machine/views.sysml",
    "status_payload": {
      "elementType": "PartDefinition",
      "uri": "<BOOK>/examples/coffee-machine/views.sysml"
    },
    "uri": "<BOOK>/examples/coffee-machine/views.sysml",
    "workspace_edit": {
      "changes": [
        {
          "edits": [
            {
              "col_end": 0,
              "col_start": 0,
              "line_end": 137,
              "line_start": 137,
              "new_text": "    part def NewPart {\n    }\n\n"
            }
          ],
          "uri": "<BOOK>/examples/coffee-machine/views.sysml"
        }
      ]
    }
  }
}
