crates/testing/sysml-spec-tests/tests/snapshots/service_command_baseline__sysml_diagram_edit__espresso_pump.snap
---
source: crates/testing/sysml-spec-tests/tests/service_command_baseline.rs
assertion_line: 1150
expression: bundle
---
{
  "request": {
    "request": {
      "action": "create",
      "containerId": null,
      "elementTypeId": "PartDefinition",
      "uri": "<WS>/examples/espresso-pump-hybrid/Physics/PumpODE.sysml"
    }
  },
  "response": {
    "action": "create",
    "status_message": "Created PartDefinition in <WS>/examples/espresso-pump-hybrid/Physics/PumpODE.sysml",
    "status_payload": {
      "elementType": "PartDefinition",
      "uri": "<WS>/examples/espresso-pump-hybrid/Physics/PumpODE.sysml"
    },
    "uri": "<WS>/examples/espresso-pump-hybrid/Physics/PumpODE.sysml",
    "workspace_edit": {
      "changes": [
        {
          "edits": [
            {
              "col_end": 0,
              "col_start": 0,
              "line_end": 124,
              "line_start": 124,
              "new_text": "    part def NewPart {\n    }\n\n"
            }
          ],
          "uri": "<WS>/examples/espresso-pump-hybrid/Physics/PumpODE.sysml"
        }
      ]
    }
  }
}
